syntax = "proto3";

package puniyu.bot;
import "adapter.proto";
import "account.proto";

message BotInfo {
  puniyu.adapter.AdapterInfo  adapter = 1;
  puniyu.account.AccountInfo account = 2;
}