syntax = "proto3";

package puniyu.event;
import "event/message.proto";


message EventReceive {
  oneof event {
    puniyu.event.message.MessageEventReceive message_event = 1;
  }
}

message EventSend {
  oneof event {
    puniyu.event.message.MessageEventSend message_event = 1;
  }
}