syntax = "proto3";

package puniyu.account;

message AccountInfo {
  string uin = 1;
  string name = 2;
  string avatar = 3;
}